Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
None
-
8d9dfd334 (dev), 71cf960b8 (6.6)
Description
The attached reproducer project triggers and infinite chain of conversions in the compiler and eventually SEGFAULTs.
Attachments
For Gerrit Dashboard: QTBUG-116088 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
497038,7 | QmlCompiler: Fix conversion from/to void | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
498751,3 | QmlCompiler: Fix conversion from/to void | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |