QmlCompiler: Fix conversion from/to void

We can convert everything to void, but we can only convert from void if
the result is either void or the invalid type.

Fixes: QTBUG-116088
Change-Id: I532055405865c5b1581f79cc5d76c253bce6138d
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 8d9dfd33478c30567bbab073eed899b169dd4386)