tests/auto/qml/qmlcppcodegen/data/voidConversion.qml
@@ -1,0 +1,10 @@
+import QtQml
+
+QtObject {
+    id: item
+    property point p: Qt.point(20, 10)
+
+    Component.onCompleted: {
+        item.p = undefined
+    }
+}
